fixed images not showing up and edited in css

--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 * {
     background-color: whitesmoke;
     color: black;
+    background-image:url()
+
+}
+
+.img {
+    border-radius: 8px;
+    height: 300px;
+    width: auto;
 }
 .title {
     font-size: xx-large;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .link {
@@ -17,5 +26,15 @@
 }
 
 .moe {
-    color: blueviolet;
+    font-family: Papyrus;
+}
+
+.burger {
+    font-family: monospace;
+}
+
+.salmon {
+    font-family: "Brush Script MT";
+    font-weight: lighter;
+    
 }
